kubernetes/k3s-01/workloads/homepage/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.4.0@sha256:643bd0be730d40f69d58028a55d1a896739333e8815786df42bc97f109ecbe61
          # resources:
          #   requests:
          #     cpu: 1m
          #     memory: 96Mi
          #   limits:
          #     cpu: 15m
          #     memory: 160Mi
          ports:
            - name: web
              containerPort: 3000
          volumeMounts:
            - name: homepage
              mountPath: /app/config
      volumes:
        - name: homepage
          persistentVolumeClaim:
            claimName: homepage
