kubernetes/k3s-01/workloads/homepage/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: homepage
  namespace: homepage
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: homepage
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 3000
